# ModelDeployment

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  runVSCode.ps1
include/: other_yolo.hpp  utils.hpp
libs/ModelEncrypt/: CMakeLists.txt  encrypt.cpp  encrypt.h  mac.hpp
libs/PaddleOCR/: CMakeLists.txt  clipper.cpp  det.cpp  paddleocr.cpp  paddleocr.h  utils.h
libs/TRTInfer/: CMakeLists.txt  TRTInfer.cc  TRTInfer.h  TRTInfer_version.h.in  utility.cc  utility.h
libs/YOLO/: CMakeLists.txt  yolo.cpp  yolo.h
libs/YOLO-TRT/: CMakeLists.txt  yolo_trt.cpp  yolo_trt.h  yolo_trt_cls.cpp  yolo_trt_det.cpp  yolo_trt_obb.cpp  yolo_trt_pose.cpp  yolo_trt_seg.cpp
libs/clipper/: CMakeLists.txt
scripts/: build_engine.py  download.py  test.py  test_pyclipper.py  yolo_det_ort.py  yolo_obb_ort.py
src/: main.cpp  test_cls.cpp  test_det.cpp  test_encrypt.cpp  test_other_yolo_trt.cpp  test_other_yolo_trt_gst.cpp  test_other_yolo_trt_gst_pc.cpp  test_rtsp.cpp  test_rtsp2.cpp  test_rtsp_ffmpeg.cpp  test_rtsp_gst.cpp  test_rtsp_gst_pc.cpp  test_yolo.cpp  test_yolo_trt.cpp  test_yolo_trt_gst.cpp  test_yolo_trt_gst_pc.cpp  test_yolo_trt_stream.cpp
